--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
-DB_URL=mongodb+srv://GantaVenkataKousik:Bhavani1201@cluster0.kslyn8z.mongodb.net/Ecommerce
+DB_URL=mongodb://localhost:27017
 PORT=9002
 MODE=development
